--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,3 +46,26 @@ header {
       color: coral;
     }
   }
+  %btn-shared {
+    display: inline-block;
+    padding: 0.7rem 2rem;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    margin-top: 1rem;
+  }
+
+  .btn {
+    &-light {
+      @extend %btn-shared;
+      background: $light-color;
+      color: #333;
+      border-radius: 5px;
+    }
+    &-dark {
+      @extend %btn-shared;
+      background: $dark-color;
+      color: #fff;
+      border-radius: 5px;
+    }
+  }
